fixed spacing on all 3 pages

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -86,9 +86,7 @@ img {
 
     /* === 2.5 Spacing === */
 
-    --spacing-base: 1rem;
-    --spacing-md: 2rem;
-    --spacing-lg: 3rem;
+    --spacing-grow: 1rem;
 }
 
 /* ====================
@@ -113,7 +111,6 @@ img {
 
 .bottom_border {
     border-bottom: solid 1px var(--neutral-color-gray);
-    padding-bottom: 1rem;
 }
 
 /* ====================
@@ -167,7 +164,7 @@ img {
 
 /* === 4.5. Main Section Grid === */
 
-/* === 4.4.A Section Grid === */
+/* === 4.5.A Section Grid === */
 
 .hero__image,
 .card__image {
@@ -187,7 +184,7 @@ img {
 
 /* === 4.7 Footer === */
 
-.footer {
+.site-footer {
     justify-items: center;
     align-items: center;
 }
@@ -201,7 +198,7 @@ img {
 
 .site-header {
     background-color: #f8f8f8;
-    padding: 3rem 1rem;
+    padding: 4rem var(--spacing-grow);
 }
 
 .title-container {
@@ -211,15 +208,19 @@ img {
 /* === 5.2 Main === */
 
 .main-aside-wrapper {
-    padding: 3rem 1rem 0 1rem;
+    padding: 3rem var(--spacing-grow) 0 var(--spacing-grow);
 }
+
+.about-site-main {
+    margin-bottom: 3rem;
+}
+
 
 /* === 5.2.A Section === */
 
-.hero-section,
-.sub-section {
-    margin-bottom: 3rem;
-    padding-bottom: 3rem;
+
+.home-hero-section {
+    padding-bottom: 2rem;
 }
 
 /* === 5.2.B Caption === */
@@ -238,8 +239,12 @@ img {
 /* === 5.2.C Card === */
 
 .card {
-    margin-top: 2rem;
+    margin-top: 3rem;
     margin-bottom: 3rem;
+}
+
+.card_no-margin {
+    margin-top: 0;
 }
 
 /* === 5.3. Aside === */
@@ -257,8 +262,8 @@ img {
 
 /* === 5.3. Aside === */
 
-.footer {
-    padding: 3rem;
+.site-footer {
+    padding: 4rem;
     background-color: var(--primary-color);
 }
 
@@ -385,7 +390,7 @@ img {
 
 /* === 6.4 Footer === */
 
-.footer {
+.site-footer {
     color: var(--neutral-color-light-gray);
 }
 
@@ -395,29 +400,23 @@ img {
 
 @media (min-width: 600px) {
 
-    /* =================================================
-        1.0 Layout, Spacing, Border and Background Color
-    =================================================== */
+    /* ===============
+        1.0 VARIABLES
+    =============== */
 
-    /* sidebar=== 1.1 Header === */
+    :root {
 
-    .site-header {
-        padding-right: 2rem;
-        padding-left: 2rem;
-    }
+        /* === 1.1 Spacing === */
 
-    /* === 1.2 Main === */
+        --spacing-grow: 2rem;
 
-    .main-aside-wrapper {
-        padding-left: 2rem;
-        padding-right: 2rem;
     }
 
     /* ===============
         2.0 Grid
     =============== */
 
-    /* === 1.2.A Card === */
+    /* === 2.1.A Card === */
 
     .card {
         grid-template-columns: auto 1fr;
@@ -466,27 +465,11 @@ img {
         /* === 1.2 Alignment === */
 
         --align-text: left;
+
+        /* === 1.3 Spacing === */
+
+        --spacing-grow: 3rem;
     }
-
-    /* =================================================
-        2.0 Layout, Spacing, Border and Background Color
-    =================================================== */
-
-    /* sidebar=== 2.1 Header === */
-
-    .site-header {
-        padding-right: 3rem;
-        padding-left: 3rem;
-    }
-
-
-    /* === 2.2 Main === */
-
-    .main-aside-wrapper {
-        padding-left: 3rem;
-        padding-right: 3rem;
-    }
-
 
     /* ===============
         2.0 Grid
